tdf#105966 Solved Increment:Automatic checkbox problem in Area->Gradient tab

Change-Id: I7025b63df830853867b1b6dd17b7985ec16be83b